Added documentation and a test case

--- a/README
+++ b/README
@@ -1,6 +1,16 @@
 Django is a high-level Python Web framework that encourages rapid development
 and clean, pragmatic design.
 
+THIS IS A FORK TO TEST NON-RELATIONAL BACKENDS.
+
+Future backends to support are:
+- mongodb (wip) docs at docs/topics/db/mongodb.txt
+- gae (merging django-nonrel)
+- cassandra (future)
+- ...
+
+
+
 All documentation is in the "docs" directory and online at
 http://docs.djangoproject.com/en/dev/. If you're just getting started, here's
 how we recommend you read the docs:
